Kevin/create controller dir (#13)
* Todo controller dir added with controller and router. todo.controller test file added. Changes in api.yml

* kevin/create-controller-dir: changes in todo/controller.js and api.yml updated

* kevin/create-controller-dir: added db service reference to todo/controller

* kevin/create-controller-dir: prettier check

* kevin/create-controller-dir: prettier and eslint fixes in controller and test dir

* kevin/create-controller-dir: create controller placeholder

* kevin/create-controller-dir: create controller placeholder prettier fix

* kevin/create-controller-dir: create controller placeholder test fix

* Stub function and test for controller and server compatibility
