# backend/server/api/controllers/todo/router.js
@@ -1,0 +1,7 @@
+import * as express from "express";
+import controller from "./controller";
+
+export default express
+  .Router()
+  .post("/", controller.create)
+  .post("/stub", controller.stub);
