# backend/server/routes.js
@@ -1,5 +1,5 @@
-import examplesRouter from "./api/controllers/examples/router";
+import todoRouter from "./api/controllers/todo/router";
 
 export default function routes(app) {
-  app.use("/api/examples", examplesRouter);
+  app.use("/api/todo", todoRouter);
 }
